# Odoo.ErpNet.FP

./: .gitignore  CHANGELOG.md  HANDOFF_ACCESS_ADDON.md  INSTALL_PINPAD.md  README.bg.md  README.en.md  README.md  ROADMAP.bg.md  ROADMAP.md  ROADMAP_AC_ECOSYSTEM.md  ROADMAP_AC_PROXY_ODOO_LINK.md  docker-compose.yml  pyproject.toml
config-examples/: config-windows.example.yaml  config.yaml  configuration.json  go2rtc.example.yaml
docker/: Dockerfile
docker/traefik/: dynamic.yml  traefik.yml
docs/: ARCHITECTURE.md  PROTOCOL_REFERENCE.md  TLS_CLOUDFLARE.md  index.html
kubernetes/: .gitignore  00-namespace.yaml  10-pvc.yaml  20-configmap.yaml  30-secret.example.yaml  40-deployment.yaml  50-service.yaml  60-ingress.yaml  61-ingress-polimex.yaml  README.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: erpnet-fp.json
odoo_erpnet_fp/: __init__.py
odoo_erpnet_fp/clients/: __init__.py  bus_inject.py
odoo_erpnet_fp/config/: loader.py
odoo_erpnet_fp/drivers/: __init__.py
odoo_erpnet_fp/drivers/access/: __init__.py  common.py  dahua.py  gpio.py  hikvision.py  miv.py  onvif_relay.py  polimex.py  relay_tcp.py  wiegand.py
odoo_erpnet_fp/drivers/biometric/: __init__.py  common.py  faceauth.py
odoo_erpnet_fp/drivers/cameras/: __init__.py  common.py  go2rtc.py  lpr.py  mqtt_listener.py  (+2 more)
odoo_erpnet_fp/server/: camera_bus.py  cors_writer.py  iot_setup.py  main.py  metrics.py  odoo_forwarder.py  reader_autodetect.py  reader_bus.py  registry.py  schemas.py  service.py  shift_dedup.py  watchdog.py  win_service.py
packaging/windows-server/: Dockerfile  build-installer.sh  installer.nsi
scripts/: bench_iot_longpoll.py  discover-devices.sh  install-udev.sh
tests/: conftest.py  mock_device.py  test_access.py  test_cameras.py  test_codec.py  test_errors.py  test_frame.py  test_isl_frame.py  test_isl_vendors.py  test_mqtt_multi_broker.py  test_ohaus_ranger.py  test_pm_facade.py  test_pm_facade_phase2.py  test_pm_facade_phase2c.py  test_polimex_events.py  test_reader_access_channel.py  test_readers.py  test_scales.py  test_server.py  test_status.py
tools/: bluecash55_bridges.sh
tools/alpr_sidecar/: Dockerfile  README.md  app.py  requirements.txt
udev/: 99-erpnet-fp.rules
(+75 files in other folders)
